k8s/base/namespace.yaml
# Namespace for P5-Stock
apiVersion: v1
kind: Namespace
metadata:
  name: p5stock
  labels:
    name: p5stock
    istio-injection: enabled
